function(add_example example_name)
  add_executable(${example_name} ${example_name})
  target_link_libraries(${example_name} rpi-rgb-led-matrix)
endfunction()

add_example(c-example.c)
add_example(clock.cc)
add_example(demo-main.cc)
add_example(image-example.cc)
add_example(input-example.cc)
add_example(ledcat.cc)
add_example(minimal-example.cc)
add_example(pixel-mover.cc)
add_example(scrolling-text-example.cc)
add_example(text-example.cc)