function(add_example example_name)
  add_executable(${example_name} ${example_name})
  target_link_libraries(${example_name} rpi-rgb-led-matrix)
endfunction()

add_example(c-example.c)
add_example(clock.cc)
add_example(demo-main.cc)

find_package(ImageMagick COMPONENTS Magick++)
if(ImageMagick_FOUND)
  add_example(image-example.cc)
  target_include_directories(image-example.cc PRIVATE ${ImageMagick_INCLUDE_DIRS})
  target_link_libraries(image-example.cc PRIVATE ${ImageMagick_LIBRARIES})
else()
  message(WARNING "ImageMagick++ not found, skipping ImageMagick example.")
endif()

add_example(input-example.cc)
add_example(ledcat.cc)
add_example(minimal-example.cc)
add_example(pixel-mover.cc)
add_example(scrolling-text-example.cc)
add_example(text-example.cc)